
2024-10-28 11:10 Verena

        Modified the demo version of Analysis.cxx to analyse our data, that is however still untested and uncleaned. Updated the names of the variables. Using date.h to try changing the format of YYYY-MM-DD to numbers from 1 to 365. Implemented formulas to calculate mean temperature and errors. Should produce a histogram.

2024-10-28 11:11 Ellen
   
        Added the cleaning function that calls the smhicleaner, as well as adding the smhicleaner.sh 

2024-10-28 12:52 Ellen

        Fixed some errors with the DataExtraction.cxx and added the calling of the cleaning function in main.cxx

2024-10-28 16:39 Andreas

        Changed the read_csv function to read the csv file that we want and change it into raw data that is stored in
        a vector called data in main. The data vector has elements that are of the Measurement class that stores three variables: date, time and temperature. They can be retrieved with 
        data[0].get_date();
        data[0].get_time();
        data[0].get_temperature();
        
        Changed the Measurement class by adding validation checks and fixing errors.

        Added a directory_cleaning() function that removes the new data files created by the cleaning() function.

2024-10-28 15:00 Andreas

        Fixed the Makefile to include the .o files.
        Added scopes for the switch/case function in main.cxx.

        Added a second analysis that finds the warmest and coldest days of each year, draws it on a canvas
        with a histogram and saves it in a png.

2024-10-30 20:30 Verena

        Fixed the mean temperature over a year analysis, producing the same plot as was given to us. Calling the function in main.cxx and Analysis.h now. Using Root to create the histogram. Fixed the fact, that no histogram was produced in the earlier version by creating TCanvas. Included the same temperature and date validation as Andreas.